# KeepingRentLow

./: .cproject  .gitignore  .project  CMakeLists.txt
Include/: stm32f4xx_hal_conf.h  tusb_config.h  usb_setup.h
Libraries/BSP/Adafruit_Shield/: stm32_adafruit_lcd.c
Libraries/CMSIS/Core/Include/: core_armv81mml.h  core_cm0plus.h  core_cm23.h  core_cm4.h  core_cm85.h
Libraries/CMSIS/Core/Template/ARMv8-M/: tz_context.c
Libraries/CMSIS/Core_A/Include/: cmsis_armcc.h  cmsis_gcc.h  cmsis_iccarm.h  core_ca.h
Libraries/CMSIS/DAP/Firmware/Source/: UART.c
Libraries/CMSIS/DSP/Include/: arm_helium_utils.h  arm_math_f16.h  arm_math_memory.h  arm_math_types_f16.h  arm_mve_tables_f16.h  arm_vec_math_f16.h
Libraries/CMSIS/DSP/Include/dsp/: bayes_functions.h  bayes_functions_f16.h  complex_math_functions_f16.h  distance_functions.h  distance_functions_f16.h  filtering_functions.h  interpolation_functions_f16.h  matrix_functions.h  matrix_functions_f16.h  none.h  support_functions_f16.h  svm_functions_f16.h  transform_functions.h  utils.h
Libraries/CMSIS/DSP/PrivateInclude/: arm_vec_fft.h  arm_vec_filtering.h
Libraries/CMSIS/DSP/Source/BasicMathFunctions/: arm_abs_f16.c  arm_abs_f32.c  arm_add_f64.c  arm_add_q31.c  arm_add_q7.c  arm_clip_f16.c  arm_clip_q15.c  arm_dot_prod_f32.c  arm_dot_prod_q31.c  arm_mult_f16.c  arm_mult_q7.c  arm_negate_q15.c  arm_not_u16.c  arm_offset_f64.c  arm_offset_q31.c  arm_or_u32.c  arm_scale_q15.c  arm_sub_f64.c  arm_sub_q15.c  arm_sub_q7.c  arm_xor_u16.c  arm_xor_u8.c
Libraries/CMSIS/DSP/Source/BayesFunctions/: BayesFunctionsF16.c
Libraries/CMSIS/DSP/Source/CommonTables/: arm_const_structs.c
Libraries/CMSIS/DSP/Source/ComplexMathFunctions/: ComplexMathFunctions.c  ComplexMathFunctionsF16.c  arm_cmplx_mag_f32.c  arm_cmplx_mag_fast_q15.c  arm_cmplx_mag_squared_f32.c  arm_cmplx_mult_cmplx_f16.c  arm_cmplx_mult_cmplx_f64.c  arm_cmplx_mult_cmplx_q15.c  arm_cmplx_mult_cmplx_q31.c  arm_cmplx_mult_real_q15.c
Libraries/CMSIS/DSP/Source/ControllerFunctions/: arm_pid_init_q15.c  arm_pid_reset_f32.c  arm_pid_reset_q15.c
Libraries/CMSIS/DSP/Source/DistanceFunctions/: arm_braycurtis_distance_f16.c  arm_canberra_distance_f16.c  arm_chebyshev_distance_f16.c  arm_chebyshev_distance_f32.c  arm_cityblock_distance_f32.c  arm_correlation_distance_f16.c  arm_correlation_distance_f32.c  arm_cosine_distance_f64.c  arm_euclidean_distance_f16.c  arm_euclidean_distance_f32.c  arm_jensenshannon_distance_f32.c  arm_kulsinski_distance.c  arm_minkowski_distance_f16.c  arm_rogerstanimoto_distance.c  arm_russellrao_distance.c  arm_sokalsneath_distance.c  arm_yule_distance.c
Libraries/CMSIS/DSP/Source/FastMathFunctions/: arm_atan2_f16.c  arm_atan2_f32.c  arm_atan2_q31.c  arm_cos_q31.c  arm_sqrt_q15.c  arm_vexp_f64.c  arm_vinverse_f16.c  arm_vlog_f16.c  arm_vlog_f32.c  arm_vlog_q31.c
Libraries/CMSIS/DSP/Source/FilteringFunctions/: FilteringFunctions.c  arm_biquad_cascade_df1_f32.c  arm_biquad_cascade_df1_fast_q15.c  arm_biquad_cascade_df1_fast_q31.c  arm_biquad_cascade_df1_init_f16.c  arm_biquad_cascade_df1_init_f32.c  arm_biquad_cascade_df1_init_q31.c  arm_biquad_cascade_df2T_f16.c  arm_biquad_cascade_stereo_df2T_f16.c  arm_conv_f32.c  arm_conv_fast_opt_q15.c  arm_conv_opt_q15.c  arm_conv_partial_fast_q31.c  arm_conv_partial_opt_q15.c  arm_conv_partial_q31.c  arm_conv_q7.c  arm_correlate_f32.c  arm_correlate_opt_q15.c  arm_fir_decimate_fast_q15.c  arm_fir_decimate_fast_q31.c  arm_fir_decimate_q15.c  arm_fir_decimate_q31.c  arm_fir_fast_q15.c  arm_fir_init_f64.c  arm_fir_init_q15.c  arm_fir_interpolate_init_f32.c  arm_fir_interpolate_q15.c  arm_fir_lattice_init_f32.c  (+13 more)
Libraries/CMSIS/Include/: cmsis_compiler.h  core_armv81mml.h  core_cm1.h  core_cm3.h  core_cm33.h  core_cm55.h  core_cm7.h
Libraries/CMSIS/NN/Include/: arm_nn_math_types.h  arm_nnfunctions.h
Libraries/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_hal_adc.h  stm32f4xx_hal_dcmi_ex.h  stm32f4xx_hal_dfsdm.h  stm32f4xx_hal_dma2d.h  stm32f4xx_hal_exti.h  stm32f4xx_hal_flash.h  stm32f4xx_hal_fmpsmbus_ex.h  stm32f4xx_hal_gpio_ex.h  stm32f4xx_hal_hash.h  stm32f4xx_hal_hash_ex.h  stm32f4xx_hal_lptim.h  stm32f4xx_hal_nor.h  stm32f4xx_hal_pcd.h  stm32f4xx_hal_pwr_ex.h  stm32f4xx_hal_rng.h  stm32f4xx_hal_smartcard.h  stm32f4xx_hal_spi.h  stm32f4xx_hal_tim.h  stm32f4xx_hal_uart.h  stm32f4xx_hal_usart.h  stm32f4xx_ll_dac.h  stm32f4xx_ll_dma2d.h  stm32f4xx_ll_exti.h  stm32f4xx_ll_i2c.h  stm32f4xx_ll_iwdg.h  stm32f4xx_ll_lptim.h  stm32f4xx_ll_pwr.h  stm32f4xx_ll_rtc.h  stm32f4xx_ll_sdmmc.h  stm32f4xx_ll_system.h  stm32f4xx_ll_usart.h  stm32f4xx_ll_usb.h  stm32f4xx_ll_wwdg.h
Libraries/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal.c  stm32f4xx_hal_adc.c  stm32f4xx_hal_adc_ex.c  stm32f4xx_hal_can.c  stm32f4xx_hal_cec.c  stm32f4xx_hal_dac.c  stm32f4xx_hal_dac_ex.c  stm32f4xx_hal_fmpi2c.c  stm32f4xx_hal_fmpsmbus_ex.c  stm32f4xx_hal_hash.c  stm32f4xx_hal_i2c.c  stm32f4xx_hal_irda.c  stm32f4xx_hal_mmc.c  stm32f4xx_hal_msp_template.c  stm32f4xx_hal_pcd.c  stm32f4xx_hal_rcc.c  stm32f4xx_hal_rcc_ex.c  stm32f4xx_hal_rng.c  stm32f4xx_hal_sai.c  stm32f4xx_hal_sd.c  stm32f4xx_hal_spi.c  stm32f4xx_hal_tim.c  stm32f4xx_hal_timebase_rtc_alarm_template.c  stm32f4xx_hal_timebase_rtc_wakeup_template.c  stm32f4xx_hal_timebase_tim_template.c
Libraries/STM32F4xx_HAL_Driver/Src/Legacy/: stm32f4xx_hal_eth.c
Sources/: main.cpp  usb_setup.c
(+148 files in other folders)
